--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,53 @@ body {
     text-align: center;
     margin-top: 50px;
 }
+
+#loading-screen {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+#logo {
+    width: 100px;
+    height: 100px;
+}
+
+#loading-text {
+    font-size: 24px;
+    margin-top: 20px;
+}
+
+#content {
+    animation: fadeIn 1s;
+    text-align: center;
+    margin: 0 auto;
+    width: 80%;
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+canvas {
+    display: block;
+    margin: 0 auto;
+}
