--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,19 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    margin-top: 50px;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(to top left, rgba(255, 248, 220, 0), rgba(255, 248, 220, 0.8), rgba(255, 248, 220, 0.8), rgba(255, 248, 220, 0.8), rgba(255, 248, 220, 0.8), rgba(255, 248, 220, 1)), url('bg.png') no-repeat bottom right;
+    background-size: cover;
+    color: #228B22; /* Forest Green */
 }
 
 #loading-screen {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     text-align: center;
 }
 
@@ -20,13 +25,16 @@ body {
 #loading-text {
     font-size: 24px;
     margin-top: 20px;
+    color: #228B22; /* Forest Green */
 }
 
 #content {
     animation: fadeIn 1s;
     text-align: center;
+    width: 100%;
+    max-width: 600px;
     margin: 0 auto;
-    width: 80%;
+    color: #228B22; /* Forest Green */
 }
 
 @keyframes fadeOut {
@@ -52,4 +60,6 @@ body {
 canvas {
     display: block;
     margin: 0 auto;
+    width: 100% !important;
+    height: auto !important;
 }
