--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: center; /* Center content vertically */
+    align-items: center; /* Center content horizontally */
     background: linear-gradient(to top left, rgba(255, 248, 220, 0), rgba(255, 248, 220, 0.8), rgba(255, 248, 220, 0.8), rgba(255, 248, 220, 0.8), rgba(255, 248, 220, 0.8), rgba(255, 248, 220, 1)), url('bg.png') no-repeat bottom right;
     background-size: cover;
     color: #228B22; /* Forest Green */
@@ -15,7 +15,24 @@ body {
 
 #loading-screen {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute; /* Make sure it's positioned over the entire screen */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 1); /* White background */
+    z-index: 9999; /* Ensure it is on top */
+    opacity: 1;
+    transition: opacity 2s; /* Smooth fade-out transition */
 }
+
+    #loading-screen.fade-out {
+        opacity: 0; /* Fade out */
+    }
 
 #logo {
     width: 100px;
@@ -29,37 +46,32 @@ body {
 }
 
 #content {
-    animation: fadeIn 1s;
     text-align: center;
     width: 100%;
-    max-width: 600px;
+    max-width: 100%;
+    height: 100%;
     margin: 0 auto;
     color: #228B22; /* Forest Green */
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
-@keyframes fadeOut {
-    from {
-        opacity: 1;
-    }
-
-    to {
-        opacity: 0;
-    }
+#controls {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
+#chart-container {
+    width: 100%;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(100% - 60px); /* Adjusting for the height of controls and margins */
 }
 
 canvas {
-    display: block;
-    margin: 0 auto;
-    width: 100% !important;
-    height: auto !important;
+    width: 80% !important; /* 80% of the remaining width */
+    height: 80% !important; /* 80% of the remaining height */
 }
